--- a/translations/it.json
+++ b/translations/it.json
@@ -7,6 +7,8 @@
     "alerts": "Sistema Alert",
     "mount_points": "Punti di Mount",
     "languages": "Lingue",
+    "commands": "Comandi",
+    "video_analysis": "Analisi Video",
     "info": "Informazioni"
   },
   "monitoring": {
@@ -16,6 +18,15 @@
       "inactive": "Disattivato"
     },
     "description": "Monitora le connessioni SSH/SFTP e invia notifiche tramite Telegram quando rileva un nuovo accesso.",
+    "excluded_ips": {
+      "title": "IP Esclusi dal Monitoraggio",
+      "placeholder": "Inserisci gli IP da escludere (uno per riga)",
+      "description": "Gli indirizzi IP inseriti qui non genereranno notifiche di accesso SSH/SFTP. Supporta singoli IP (es. 192.168.1.100) e notazione CIDR (es. 192.168.178.0/24)",
+      "save_button": "Salva IP Esclusi",
+      "save_success": "Lista IP esclusi salvata con successo",
+      "save_error": "Errore nel salvataggio della lista IP esclusi",
+      "communication_error": "Errore nella comunicazione con il server"
+    },
     "toggle_success": "Monitoraggio {status} con successo",
     "toggle_error": "Errore nel cambio di stato del monitoraggio"
   },
@@ -36,6 +47,9 @@
     "network_monitoring": "Monitoraggio Connessione di Rete",
     "enabled": "Abilitato",
     "threshold": "Soglia",
+    "hysteresis": "Isteresi",
+    "hysteresis_duration": "Durata Isteresi (sec)",
+    "hysteresis_description": "L'isteresi ritarda l'invio dell'alert solo se il valore supera la soglia per il tempo specificato",
     "reminder": "Reminder",
     "interval": "Intervallo",
     "unit": "Unità",
@@ -100,6 +114,7 @@
       "docker": "Gestisci i container Docker",
       "upload": "Carica files sul server",
       "download": "Scarica files dal server",
+      "commands": "Esegui comandi configurati",
       "reboot": "Riavvia il server"
     }
   },
@@ -187,15 +202,137 @@
     "switch_to_dark": "Passa al tema scuro",
     "switch_to_light": "Passa al tema chiaro"
   },
+  "video_analysis": {
+    "title": "Analisi Video",
+    "configuration": "Configurazione AI Detection",
+    "global_enabled": "Abilita AI Detection Globalmente",
+    "model": "Modello YOLO",
+    "detection_interval": "Intervallo Detection (secondi)",
+    "max_cameras": "Max Telecamere Simultanee",
+    "save_config": "Salva Configurazione",
+    "status": "Stato",
+    "controls": "Controlli Detection",
+    "start": "Avvia Detection",
+    "restart": "Riavvia Detection",
+    "stop": "Ferma Detection",
+    "system_status": "Stato Sistema:",
+    "waiting": "In attesa di aggiornamento...",
+    "cameras": {
+      "title": "Gestione Telecamere",
+      "add": "Aggiungi Telecamera",
+      "name": "Nome Telecamera",
+      "rtsp_url": "URL RTSP",
+      "confidence": "Soglia Confidenza",
+      "categories": "Categorie da Rilevare",
+      "people": "👤 Persone",
+      "objects": "📦 Oggetti",
+      "animals": "🐾 Animali",
+      "save": "Salva",
+      "enabled": "Abilitata",
+      "settings": "Impostazioni",
+      "placeholder": {
+        "name": "Es: Ingresso Principale",
+        "rtsp": "rtsp://username:password@ip:port/stream"
+      },
+      "iou_threshold": "Soglia IoU",
+      "iou_threshold_description": "Soglia Intersection over Union per filtrare le rilevazioni sovrapposte (più basso = più rigoroso)",
+      "save_images": "Salva Immagini sul Server",
+      "save_images_description": "Quando abilitato, gli snapshot delle rilevazioni verranno salvati permanentemente sul server per tutte le telecamere",
+      "save_path": "Percorso di Salvataggio",
+      "save_path_description": "Percorso della directory dove verranno archiviati tutti gli snapshot delle rilevazioni sul server",
+      "save_path_placeholder": "Inserisci il percorso dove salvare gli snapshot"
+    },
+    "models": {
+      "nano": "yolov10n Nano (Veloce)",
+      "small": "yolov10s Small",
+      "medium": "yolov10m Medium",
+      "large": "yolov10l Large (Preciso)",
+      "xlarge": "yolov10x XLarge (Super Preciso)"
+    },
+    "bot_messages": {
+      "detection_started": "🎥 **AI Detection Avviata**\n\nIl sistema di rilevamento AI è stato avviato e sta monitorando le telecamere configurate.",
+      "detection_stopped": "🛑 **AI Detection Fermata**\n\nIl sistema di rilevamento AI è stato fermato.",
+      "detection_restarted": "🔄 **AI Detection Riavviata**\n\nIl sistema di rilevamento AI è stato riavviato con le nuove impostazioni.",
+      "object_detected": "🔍 **Oggetto Rilevato**\n\nTelecamera: {camera_name}\nOggetti: {objects}\nData: {date}\nOra: {time}"
+    }
+  },
   "bot_messages": {
     "welcome": "Benvenuto nel Server Monitor Bot!\n\nQuesto bot ti permette di monitorare lo stato del tuo server e ricevere notifiche quando vengono rilevati eventi importanti come accessi SSH o utilizzo elevato delle risorse.\n\nUsa /res per controllare lo stato attuale del server\nUsa /help per vedere tutti i comandi disponibili",
-    "help": "Comandi disponibili:\n\n/start - Avvia il bot\n/help - Mostra questo messaggio di aiuto\n/res - Visualizza le risorse del sistema\n/docker - Gestisci i container Docker\n/upload - Carica files sul server\n/download - Scarica files dal server\n/reboot - Riavvia il server (richiede conferma)",
+    "help": "Comandi disponibili:\n\n/start - Avvia il bot\n/help - Mostra questo messaggio di aiuto\n/res - Visualizza le risorse del sistema\n/docker - Gestisci i container Docker\n/upload - Carica files sul server\n/download - Scarica files dal server\n/commands - Esegui comandi configurati\n/reboot - Riavvia il server (richiede conferma)",
+    "keyboard_buttons": {
+      "resources": "📊 Utilizzo Risorse",
+      "docker": "🐳 Containers",
+      "upload": "📤 Upload sul Server",
+      "download": "📥 Download dal Server",
+      "ai": "🤖 AI Detection",
+      "commands": "⚙️ Lista Comandi",
+      "reboot": "🔄 Riavvia il Server",
+      "help": "❓ Aiuto"
+    },
     "choose_resource": "Scegli quale informazione visualizzare:",
     "reboot_confirm": "Sei sicuro di voler riavviare il server?\n\nQuesta azione causerà un'interruzione temporanea di tutti i servizi.",
     "reboot_yes": "Sì, riavvia il server",
     "reboot_no": "No, annulla",
     "operation_cancelled": "Operazione annullata.",
     "reboot_in_progress": "Riavvio del server in corso...\n\nIl server verrà riavviato. Questa operazione potrebbe richiedere alcuni minuti.\nIl bot sarà temporaneamente non disponibile fino al completamento del riavvio.",
+    "commands": {
+      "title": "📋 Comandi Disponibili",
+      "select_command": "Seleziona un comando da eseguire:",
+      "no_commands": "❌ Nessun comando configurato.",
+      "no_enabled_commands": "❌ Nessun comando abilitato.",
+      "cancel": "❌ Annulla",
+      "error": "❌ Errore durante il caricamento dei comandi.",
+      "command_not_found": "❌ Comando non trovato.",
+      "command_disabled": "❌ Comando disabilitato.",
+      "executing": "⏳ Esecuzione del comando *{command_name}* in corso...",
+      "script_not_found": "❌ Script non trovato nel percorso specificato.",
+      "execution_success": "✅ *Comando Eseguito con Successo*\n\n📝 *Nome:* {command_name}\n📄 *Descrizione:* {description}\n🕐 *Timestamp:* {timestamp}\n\n📤 *Output:*\n```\n{output}\n```",
+      "execution_error": "❌ *Errore Esecuzione Comando*\n\n📝 *Nome:* {command_name}\n🚨 *Errore:* {error}\n🕐 *Timestamp:* {timestamp}",
+      "scheduled_success": "⏰ *Comando Schedulato Eseguito*\n\n📝 *Nome:* {command_name}\n📄 *Descrizione:* {description}\n🕐 *Timestamp:* {timestamp}\n\n📤 *Output:*\n```\n{output}\n```",
+      "scheduled_success_no_output": "⏰ *Comando Schedulato Eseguito*\n\n📝 *Nome:* {command_name}\n📄 *Descrizione:* {description}\n🕐 *Timestamp:* {timestamp}",
+      "scheduled_error": "⏰ *Errore Comando Schedulato*\n\n📝 *Nome:* {command_name}\n🚨 *Errore:* {error}\n🕐 *Timestamp:* {timestamp}",
+      "scheduling_system_error": "⏰ *Errore Sistema Scheduling*\n\n📝 *Comando:* {command_name}\n🚨 *Errore:* {error}\n🕐 *Timestamp:* {timestamp}",
+      "general_error": "❌ Errore generale durante l'esecuzione del comando."
+    },
+    "ai_detection": {
+      "title": "🤖 Controllo AI Detection",
+      "status_title": "📊 Stato AI Detection",
+      "global_enabled": "✅ AI Detection Globalmente Abilitata",
+      "global_disabled": "❌ AI Detection Globalmente Disabilitata",
+      "not_available": "❌ AI Detection non disponibile su questo sistema",
+      "cameras_active": "📹 Telecamere Attive: {count}",
+      "cameras_total": "📷 Telecamere Totali: {count}",
+      "start_button": "▶️ Avvia Detection",
+      "stop_button": "⏹️ Ferma Detection",
+      "restart_button": "🔄 Riavvia Detection",
+      "status_button": "📊 Stato Sistema",
+      "toggle_global_button": "🔄 Abilita/Disabilita Globalmente",
+      "back_button": "⬅️ Torna al Menu",
+      "starting": "⏳ Avvio AI Detection in corso...",
+      "stopping": "⏳ Arresto AI Detection in corso...",
+      "restarting": "⏳ Riavvio AI Detection in corso...",
+      "started_success": "✅ AI Detection avviata con successo!",
+      "stopped_success": "✅ AI Detection fermata con successo!",
+      "restarted_success": "✅ AI Detection riavviata con successo!",
+      "start_error": "❌ Errore durante l'avvio dell'AI Detection",
+      "stop_error": "❌ Errore durante l'arresto dell'AI Detection",
+      "restart_error": "❌ Errore durante il riavvio dell'AI Detection",
+      "global_enabled_success": "✅ AI Detection abilitata globalmente",
+      "global_disabled_success": "✅ AI Detection disabilitata globalmente",
+      "global_toggle_error": "❌ Errore durante il cambio di stato globale",
+      "no_cameras_configured": "⚠️ Nessuna telecamera configurata",
+      "configure_cameras_web": "Configura le telecamere tramite l'interfaccia web",
+      "started": "✅ AI Detection avviato con successo",
+      "stopped": "⏹️ AI Detection fermato con successo",
+      "restarted": "🔄 AI Detection riavviato con successo",
+      "global_enabled_msg": "✅ AI Detection abilitato globalmente",
+      "global_disabled_msg": "❌ AI Detection disabilitato globalmente",
+      "toggle_error": "❌ Errore nel cambio stato globale",
+      "status_detailed": "📊 Stato Dettagliato AI Detection",
+      "status_error": "❌ Errore nel recupero dello stato",
+      "active_cameras_list": "📹 Telecamere Attive:",
+      "back_to_menu": "🔙 Torna al Menu AI"
+    },
     "docker_management": "Gestione Container Docker",
     "docker_summary": "🟢 Attivi: {running} | 🔴 Fermi: {stopped}",
     "back_to_resources": "⬅️ Torna al menu risorse",
@@ -358,15 +495,161 @@
       "second_singular": "secondo",
       "second_plural": "secondi"
     },
+    "video_analysis": {
+      "title": "Analisi Video",
+      "ai_config": {
+        "title": "Configurazione AI Detection",
+        "global_enabled": "Abilita AI Detection Globalmente",
+        "model": "Modello YOLO",
+        "detection_interval": "Intervallo Detection (secondi)",
+        "max_cameras": "Max Telecamere Simultanee",
+        "save_config": "Salva Configurazione",
+        "status": "Stato"
+      },
+      "controls": {
+        "title": "Controlli Detection",
+        "start": "Avvia Detection",
+        "restart": "Riavvia Detection",
+        "stop": "Ferma Detection",
+        "system_status": "Stato Sistema:",
+        "waiting": "In attesa di aggiornamento..."
+      },
+      "cameras": {
+        "title": "Gestione Telecamere",
+        "add": "Aggiungi Telecamera",
+        "no_cameras": "Nessuna telecamera configurata. Clicca \"Aggiungi Telecamera\" per iniziare.",
+        "enabled": "Abilitata",
+        "settings": "Impostazioni",
+        "name": "Nome Telecamera",
+        "rtsp_url": "URL RTSP",
+        "confidence": "Soglia Confidenza",
+        "categories": "Categorie da Rilevare",
+        "people": "👤 Persone",
+        "objects": "📦 Oggetti",
+        "animals": "🐾 Animali",
+        "save": "Salva Modifiche",
+        "delete": "Elimina",
+        "placeholder": {
+          "name": "Es: Ingresso Principale",
+          "rtsp": "rtsp://username:password@ip:port/stream",
+          "save_path": "/var/lib/ssh_monitor/snapshots"
+        }
+      },
+      "messages": {
+        "config_saved": "Configurazione AI salvata con successo",
+        "cameras_saved": "Configurazione telecamere salvata con successo",
+        "camera_deleted": "Telecamera eliminata con successo",
+        "detection_started": "Detection avviata con successo",
+        "detection_stopped": "Detection fermata con successo",
+        "detection_restarted": "Detection riavviata con successo",
+        "error": "Si è verificato un errore: {message}"
+      },
+      "bot_messages": {
+        "detection_alert": "🔍 *Rilevamento AI*\n\n📷 *Camera:* {camera_name}\n⏱️ *Orario:* {timestamp}\n\n🔎 *Rilevati:*\n{detections}",
+        "person_detected": "👤 Persona ({confidence}%)",
+        "animal_detected": "🐾 Animale: {class_name} ({confidence}%)",
+        "object_detected": "📦 Oggetto: {class_name} ({confidence}%)"
+      }
+    },
     "alert_messages": {
-      "cpu_alert": "🚨 *ALERT - CPU*\n\n💻 *Utilizzo corrente:* {value:.1f}%\n⚠️ *Soglia superata:* {threshold:.1f}%\n🕐 *Timestamp:* {timestamp}",
+      "cpu_alert": "🚨 ALERT - CPU\n\n💻 Utilizzo corrente: {value:.1f}%\n⚠️ Soglia superata: {threshold:.1f}%\n🕐 Timestamp: {timestamp}\n\n{top_processes}",
       "cpu_recovery": "✅ *RECOVERY - CPU*\n\n💻 *Utilizzo corrente:* {value:.1f}%\n✅ *Rientrato sotto soglia:* {threshold:.1f}%\n🕐 *Timestamp:* {timestamp}",
-      "ram_alert": "🚨 *ALERT - RAM*\n\n💾 *Utilizzo corrente:* {value:.1f}%\n⚠️ *Soglia superata:* {threshold:.1f}%\n🕐 *Timestamp:* {timestamp}",
+      "ram_alert": "🚨 ALERT - RAM\n\n💾 Utilizzo corrente: {value:.1f}%\n⚠️ Soglia superata: {threshold:.1f}%\n🕐 Timestamp: {timestamp}\n\n{top_processes}",
       "ram_recovery": "✅ *RECOVERY - RAM*\n\n💾 *Utilizzo corrente:* {value:.1f}%\n✅ *Rientrato sotto soglia:* {threshold:.1f}%\n🕐 *Timestamp:* {timestamp}",
-      "temp_alert": "🚨 *ALERT - Temperatura CPU*\n\n🌡️ *Temperatura corrente:* {value:.1f}°C\n⚠️ *Soglia superata:* {threshold:.1f}°C\n🕐 *Timestamp:* {timestamp}",
+      "temp_alert": "🚨 ALERT - Temperatura CPU\n\n🌡️ Temperatura corrente: {value:.1f}°C\n⚠️ Soglia superata: {threshold:.1f}°C\n🕐 Timestamp: {timestamp}\n\n{top_processes}",
       "temp_recovery": "✅ *RECOVERY - Temperatura CPU*\n\n🌡️ *Temperatura corrente:* {value:.1f}°C\n✅ *Rientrata sotto soglia:* {threshold:.1f}°C\n🕐 *Timestamp:* {timestamp}",
       "disk_alert": "🚨 *ALERT - Spazio Disco*\n\n📂 *Mount Point:* `{mount_point}`\n📊 *Utilizzo corrente:* {value:.1f}%\n⚠️ *Soglia superata:* {threshold:.1f}%\n🕐 *Timestamp:* {timestamp}",
       "disk_recovery": "✅ *RECOVERY - Spazio Disco*\n\n📂 *Mount Point:* `{mount_point}`\n📊 *Utilizzo corrente:* {value:.1f}%\n✅ *Rientrato sotto soglia:* {threshold:.1f}%\n🕐 *Timestamp:* {timestamp}"
+    }
+  },
+  "commands": {
+    "title": "Gestione Comandi",
+    "description": "Configura script personalizzati da eseguire tramite bot Telegram.",
+    "configured_commands": "Comandi Configurati",
+    "add_command": "Aggiungi Comando",
+    "new_command": "Nuovo Comando",
+    "command_name": "Nome Comando",
+    "command_description": "Descrizione",
+    "script_path": "Percorso Script",
+    "script_path_help": "Inserisci il percorso completo dello script da eseguire (es. /home/user/scripts/backup.sh)",
+    "enabled": "Abilitato",
+    "cron_enabled": "Abilita Scheduling",
+    "cron_schedule": "Espressione Cron",
+    "cron_schedule_help": "Formato: minuti(0-59) ore(0-23) giorni_del_mese(1-31) mese(1-12) giorni_della_settimana(0-6, 0=domenica)",
+    "save_command": "Salva Comando",
+    "update_command": "Aggiorna Comando",
+    "cancel": "Annulla",
+    "test_command": "Testa Comando",
+    "edit_command": "Modifica",
+    "delete_command": "Elimina",
+    "execute_command": "Esegui",
+    "command_saved": "Comando salvato con successo",
+    "command_deleted": "Comando eliminato con successo",
+    "command_executed": "Comando eseguito con successo",
+    "command_test_success": "Test comando completato",
+    "command_error": "Errore nell'esecuzione del comando",
+    "script_not_found": "Script non trovato nel percorso specificato",
+    "no_commands": "Nessun comando configurato",
+    "confirm_delete": "Sei sicuro di voler eliminare questo comando?",
+    "telegram": {
+      "commands_list": "📋 *Comandi Disponibili:*\n\n{commands}\n\nSeleziona un comando da eseguire:",
+      "no_commands": "❌ Nessun comando configurato.",
+      "command_executed": "✅ *Comando Eseguito*\n\n📝 *Nome:* {name}\n📄 *Descrizione:* {description}\n🕐 *Timestamp:* {timestamp}\n\n📤 *Output:*\n```\n{output}\n```",
+      "command_error": "❌ *Errore Esecuzione Comando*\n\n📝 *Nome:* {name}\n🚨 *Errore:* {error}\n🕐 *Timestamp:* {timestamp}",
+      "command_not_found": "❌ Comando non trovato.",
+      "command_disabled": "❌ Comando disabilitato.",
+      "script_not_executable": "❌ Script non eseguibile o non trovato."
+    }
+  },
+  "charts": {
+    "title": "Grafico Storico",
+    "time_range": "Intervallo Temporale",
+    "refresh": "Aggiorna",
+    "reset": "Reset Dati",
+    "reset_confirm": "Sei sicuro di voler cancellare tutti i dati storici dei grafici?",
+    "reset_success": "Dati storici cancellati con successo",
+    "reset_error": "Errore nella cancellazione dei dati storici",
+    "graph_button": "📊 Grafico",
+    "graph_generating": "Generazione grafico in corso...",
+    "graph_sent": "Grafico inviato con successo",
+    "graph_error": "Errore nella generazione del grafico",
+    "select_time_range": "📊 Seleziona l'intervallo temporale per il grafico:",
+    "auto_refresh": "Aggiornamento Automatico",
+    "current_value": "Valore Attuale",
+    "average": "Media",
+    "maximum": "Massimo",
+    "minimum": "Minimo",
+    "ranges": {
+      "30m": "Ultimi 30 Minuti",
+      "1h": "Ultima Ora",
+      "6h": "Ultime 6 Ore",
+      "24h": "Ultime 24 Ore",
+      "3d": "Ultimi 3 Giorni",
+      "7d": "Ultimi 7 Giorni",
+      "30d": "Ultimi 30 Giorni"
+    },
+    "metrics": {
+      "cpu": "CPU",
+      "ram": "RAM",
+      "temperature": "Temperatura"
+    },
+    "captions": {
+      "cpu_temp": "📊 Grafico CPU e Temperatura - {time_range}",
+      "ram": "📊 Grafico RAM - {time_range}",
+      "data_source": "Dati basati sui valori raccolti nel file historical_metrics.json"
+    },
+    "titles": {
+      "cpu_temp_detailed": "Storico CPU e Temperatura - Analisi Dettagliata",
+      "ram_detailed": "Storico Utilizzo RAM - Analisi Dettagliata"
+    },
+    "labels": {
+      "current": "Attuale",
+      "average": "Media",
+      "minimum": "Min",
+      "maximum": "Max",
+      "cpu_usage": "Utilizzo CPU",
+      "cpu_temperature": "Temperatura CPU",
+      "ram_usage": "Utilizzo RAM"
     }
   }
 }
